<resources>
    <string name="app_name">Jak jest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_miejsca">Miejsca w pobliżu</string>
    <string name="menu_ulubione">Ulubione</string>
    <string name="menu_ustawienia">Wyślij opinie</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_opinia">Wyślij opinie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1777362532521762</string>
    <string name="title_activity_wydarzenie">Wydarzenie</string>
    <string name="url">http://liwiuszweb.cba.pl/</string>
    <string name="urlInsert">http://liwiuszweb.cba.pl/insertkomentarz.php</string>
</resources>
